--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,38 @@
 .App {
-  text-align: center;
+  background: linear-gradient(106.37deg, #ffe1bc 29.63%, #ffcfd1 51.55%, #f3c6f1 90.85%);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.AppGlass {
+  display: grid;
+  width: 97%;
+  height: 97%;
+  background: var(--glass);
+  border-radius: 2rem;
+  grid-template-columns: 11rem auto 20rem;
+  gap: 10px;
+  overflow: hidden;
+}
+
+@media screen and (max-width:1200px) {
+  .AppGlass {
+    grid-template-columns: 10% 50% auto;
+    overflow-y: scroll;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .AppGlass {
+    grid-template-columns: 1fr;
+    overflow-y: scroll;
+  }
+
+  .AppGlass::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .App-logo {
@@ -14,7 +47,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -32,6 +64,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
